# danieleschmidt

./: .dockerignore  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_CHARTER.md  README.md  SYSTEM_OVERVIEW.md  backlog.yml  docker-compose.yml  pyproject.toml  requirements.txt  validate_sdlc.py  validation_report.json
.github/workflows/: snake.yml
deployment/: deploy.sh
docs/: README.md  ROADMAP.md
docs/adr/: template.md
docs/status/: 2025-07-26-initial.json
github-workflows/: README.md  backlog-automation.yml  ci.yml
src/: README.md  async_processing.py  backlog_manager.py  bioneuro_olfactory_fusion.py  caching_framework.py  logging_framework.py  monitoring_framework.py  performance_optimizer.py  project_generator.py  quality_gates.py  research_benchmarking.py  security_scanner.py  wsjf_engine.py
tests/: README.md  conftest.py
tests/integration/: test_sdlc_integration.py
tests/unit/: test_backlog_manager.py  test_security_scanner.py  test_wsjf_engine.py
